--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sweetalert2-react-content": "^5.0.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
